[project]
name = "pyblackbird"
version = "0.7"
authors = [
  { name = "Ben Kools", email="koolsb@my.uwstout.edu" },
  { name = "Andy Archibald" },
]
description = "Python API for talking to Monoprice Blackbird 4k 8x8 and 4x4 HDBaseT Matrix"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3"
]

[project.urls]
"Homepage" = "https://github.com/koolsb/pyblackbird"
"Bug Tracker" = "https://github.com/koolsb/pyblackbird/issues"
